## Process this file with automake to produce Makefile.in

SUBDIRS = libcddb src po
pixdir = $(datadir)/$(PIXMAPDIR)
pix_DATA = $(PIXMAPDIR)/$(PACKAGE).png
EXTRA_DIST = $(PACKAGE).desktop $(PIXMAPDIR)/$(PACKAGE).png
ACLOCAL_AMFLAGS = -I m4
desktopdir=$(datadir)/applications
desktop_DATA = $(PACKAGE).desktop

